--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="_3_00">3:00</string>
     <string name="question">問題</string>
     <string name="reibun">「あ」から始まる、人前でやると恥ずかしいことは？</string>
+    <string name="title_activity_manage_question">ManageQuestionActivity</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
 </resources>
